# ubuntu

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  a.out  arithmetics.c  cake.c  celsius2farh.c  charNumber.c  cmake_install.cmake  compare2.c  driver_exam_native.c  fahr2celsius  genderRatio.c  infinit  infinit.c  interrupt_check.c  korea  led_driver_native  led_driver_native.c  led_switch_native  led_switch_native.c  limit  limit.c  literal.c  makefile  switch_driver_native  switch_driver_native.c  triangle
atmega128/: ch1_1_led.c  ch1_2_led.c  ch1_4_led.c  ch2_1_test.c  ch2_2_led.c  ch2_3_led.c  ch2_8_led.c
bowling/: CMakeLists.txt  Makefile  cmake_install.cmake
chatball/: chatball.c  chatball.h  main.c
opencv/: test.cpp
part1/: CMakeLists.txt  Makefile  a.out  arithmetics  cake.c  charNumber  charNumber.c  cmake_install.cmake  compare.c  fahr2celsius.c  fourBit.c  genderRatio  genderRatio.c  increment  increment.c  triangle  triangle.c  (+2 more)
part3/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  bubbleSort.c  cmake_install.cmake  pointer.c  pointer2.c  qsort.c  sort.c  sumMatrixFunction  sumMatrixFunction.c  swap.c  upper.c
part3/Carsignal/: a.out  main.c  makefile  myRandom  myRandom.h
part3/carSerial/: CMakeLists.txt  Makefile  carSerial  cmake_install.cmake  myRandom.c  serial  serial.c  struct.c
part3/date/: CMakeLists.txt  Makefile  cmake_install.cmake  date  date.c  date.h  main.c  makefile
part3/myRandom/: CMakeLists.txt  Makefile  cmake_install.cmake  myRandom
part3/string/: CMakeLists.txt  Makefile  cmake_install.cmake  myString
(+146 files in other folders)
